--- a/translations/values-new_lng/strings.xml
+++ b/translations/values-new_lng/strings.xml
@@ -1,168 +1,168 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">WarThunder tactical map</string>
+    <string name="app_name">Mapa Tático do War Thunder</string>
     
-    <string name="settings">Settings</string>
-    <string name="hide">Hide</string>
-    <string name="danger">Danger notification</string>
-    <string name="nodanger">OK notification</string>
-    <string name="proximity_wrn">Radius:</string>
-    
-    
-    <string name="more">More settings</string>
-    <string name="connerror">No connection</string>
-    
-    <string name="gui">GUI settings</string>
-    <string name="screenon">Keep screen on</string>
-    <string name="counters">Counters</string>
-    
-    <string name="ip_h">IP address</string>
-    <string name="find_ip">Scan</string>
-    <string name="set_ip">Set IP</string>
-    <string name="ip">IP of computer with War Thunder (without port):</string>
+    <string name="settings">Configurações</string>
+    <string name="hide">Esconder</string>
+    <string name="danger">Notificação de Perigo</string>
+    <string name="nodanger">Notificação de OK</string>
+    <string name="proximity_wrn">Raio:</string>
     
     
-    <string name="zoom_btns">Zoom buttons</string>
-    <string name="donate">Donate</string>
-    <string name="enemy_vehicles">Enemy vehicles</string>
-    <string name="friendly_vehicles">Friendly vehicles</string>
-    <string name="friendly_structures">Friendly structures</string>
-    <string name="enemy_structures">Enemy structures</string>
+    <string name="more">Mais configurações</string>
+    <string name="connerror">Sem conexão</string>
     
-    <string name="updates_speed">Updates frequency</string>
-    <string name="how_ip">"How to get an IP address see: http://ip.junkcode.net/help"</string>
-    <string name="how_ip_der">"If you don't know how to get your IP address click here"</string>
-    <string name="ip_err">IP address not valid</string>
-    <string name="ip_err_wrong">"input address in format \r\nXXX.XXX.XXX.XXX \r\n Click on Help for guide to get right one."</string>
-    <string name="ip_err_local">"127.0.0.1 is not right address. \r\n Click on Help for guide to get right one."</string>
+    <string name="gui">Configurações da Interface Gráfica</string>
+    <string name="screenon">Manter a tela ligada</string>
+    <string name="counters">Contadores</string>
+    
+    <string name="ip_h">Endereço IP</string>
+    <string name="find_ip">Escanear</string>
+    <string name="set_ip">Configurar IP</string>
+    <string name="ip">IP do computador com War Thunder (sem a porta):</string>
+    
+    
+    <string name="zoom_btns">Botões de Zoom</string>
+    <string name="donate">Doar</string>
+    <string name="enemy_vehicles">Veículos Inimigos</string>
+    <string name="friendly_vehicles">Veículos Aliados</string>
+    <string name="friendly_structures">Estruturas Aliadas</string>
+    <string name="enemy_structures">Estruturas Inimigas</string>
+    
+    <string name="updates_speed">Frequencia de atualização</string>
+    <string name="how_ip">"Como obter o endereço IP, veja: http://ip.junkcode.net/help"</string>
+    <string name="how_ip_der">"Se você não sabe como obter o endereço IP, clique aqui:"</string>
+    <string name="ip_err">Endereço IP inválido</string>
+    <string name="ip_err_wrong">"Escreva o endereço IP na forma: \r\nXXX.XXX.XXX.XXX \r\n Clique em Ajuda para um guia de como obter um."</string>
+    <string name="ip_err_local">"127.0.0.1 Não é o endereço certo. \r\n Clique em Ajuda para obter o certo."</string>
     <string-array name="updates_speed_array">
-        <item >Very Fast</item>
-        <item >Fast</item>
-        <item >Medium</item>
-        <item >Slowish</item>
-        <item >Slow</item>
-        <item >Srsly slow</item>
-        <item >5 sec</item>
+        <item >Muito Rápido</item>
+        <item >Rápido</item>
+        <item >Médio</item>
+        <item >Um pouco devagar</item>
+        <item >Devagar</item>
+        <item >Muito devagar</item>
+        <item >5 segundos</item>
     </string-array>
 
-     <string name="info_title">About</string>
+     <string name="info_title">sobre</string>
     <string name="info_msg">
-        "This is unofficial app made by War Thunder fans!\r\n"
-        "This app is still in beta but feel free to contact us with bugs or new ideas at:\r\n"
+        "Esse é o app não-oficial feito por fans do War Thunder!\r\n"
+        "Esse app ainda está em beta, mas sinta-se livre para contatar-nos sobre bugs ou novas ideias no endereço:\r\n"
         "http://junkcode.net/forum \r\n"
         "\r\n"
-        "We are looking for people to translate this app, if you want to help see http://junkcode.net/forum/viewtopic.php?f=14&amp;t=18 \r\n"        
+        "Nós estamos procurando pessoas para traduzirem este app, se você deseja ajudar veja: http://junkcode.net/forum/viewtopic.php?f=14&amp;t=18 \r\n"        
     </string>
     <string name="donate_line">  
-        "Do you like this app? Say it by donation on http://junkcode.net for future development. \r\n"
+        "Você gosta deste App? Mostre isso doando em: http://junkcode.net para desenvolvimento futuro. \r\n"
         </string>
-     <string name="info_update_title">Update news</string>
+     <string name="info_update_title">Notícias de Atualizações</string>
      
-    <string name="version">App Version:</string>
+    <string name="version">Versão do App:</string>
     <string name="ok">OK</string>
-    <string name="cancel">Cancel</string>
-    <string name="ignore">Ignore</string>
-    <string name="help">Help</string>
-    <string name="pref_header_notifications">Notifications</string>
+    <string name="cancel">Cancelar</string>
+    <string name="ignore">Ignorar</string>
+    <string name="help">Ajuda</string>
+    <string name="pref_header_notifications">Notificações</string>
 
     <string name="pref_title_ringtone">Ringtone</string>
-    <string name="pref_header_data_sync">PC connection</string>
-    <string name="pref_ringtone_silent">Silent</string>
+    <string name="pref_header_data_sync">Conexões com o PC</string>
+    <string name="pref_ringtone_silent">Silencioso</string>
     
-    <string name="nowificonnected">You should connect to your local WiFi</string>
+    <string name="nowificonnected">Você deve conectar com seu WiFi local.</string>
 
-    <string name="planeicons">Airplane icons</string>
+    <string name="planeicons">Ícones de aviões</string>
     <string-array name="planes_icon_size">
-        <item >Big</item>
-        <item >Medium</item>
-        <item >Small</item>
-        <item >Very small</item>
+        <item >Grande</item>
+        <item >Médio</item>
+        <item >Pequeno</item>
+        <item >Muito pequeno</item>
     </string-array>
     
-    <string name="lines">Navigation lines</string>
-    <string name="lines_oos">Only to offscreen targets</string>
-    <string name="lines_enemy">Enemies</string>
-    <string name="lines_friendly">Friendlies</string>
-    <string name="lines_squad">Squad</string>
-    <string name="lines_target">Target</string>
+    <string name="lines">Linhas de navegação</string>
+    <string name="lines_oos">Apenas para alvos fora da tela</string>
+    <string name="lines_enemy">Inimigos</string>
+    <string name="lines_friendly">Aliados</string>
+    <string name="lines_squad">Esquadrilha</string>
+    <string name="lines_target">Alvo</string>
     
-    <string name="hide_gp_login">Hide G+ Login button</string>
+    <string name="hide_gp_login">Esconder o botão de login do G+</string>
     
-    <string name="fullscreen">Fullscreen</string>
-    <string name="connect">Connect to friends</string>
+    <string name="fullscreen">Tela cheia</string>
+    <string name="connect">Conectar com amigos</string>
     
-    <string name="waypoint">Waypoint</string>
-    <string name="waypoint_ctrl">Waypoint controls</string>
-    <string name="add">Add</string>
+    <string name="waypoint">Ponto de rota</string>
+    <string name="waypoint_ctrl">Controle do ponto de rota</string>
+    <string name="add">Adicionar</string>
     
-    <string name="horizontal_distance">Show horizontal distance</string>
+    <string name="horizontal_distance">Mostrar distância horizontal</string>
     
     <string name="pref_header_extras">Extra</string>
-    <string name="prediction">Prediction</string>
-    <string name="self">Self</string>
-    <string name="show_intro_screen">Show intro splash</string>
+    <string name="prediction">Predição</string>
+    <string name="self">Próprio</string>
+    <string name="show_intro_screen">Mostrar como splash</string>
     
-    <string name="ext_unlock">Unlock extras</string>
+    <string name="ext_unlock">Desbloquear extras</string>
     <string name="ext_unlock_det">
-        "Extras are unlocked by donation of <b><i>any</i></b> amount or by content contribution\r\n(If you donated earlier and didn\'t get the code yet write us an email)"</string>
-    <string name="ext_unlock_dial">"Unlock Code:"</string>
+        "Extras são desbloqueados por doação de <b><i>qualquer</i></b> quantia ou por contribuição de conteúdo.\r\n(Se você doou anteriormente e não recebeu o código ainda nos mande um email)"</string>
+    <string name="ext_unlock_dial">"Desbloquear código:"</string>
     
-    <string name="ext_link">Link to G+ account</string>
+    <string name="ext_link">Emparelhar com a conta do G+</string>
     
-    <string name="firing_zone">Firing range</string>
-    <string name="gray_map">Grayscale map</string>
+    <string name="firing_zone">Distancia de tiro</string>
+    <string name="gray_map">Mapa em Grayscale</string>
     
-    <string name="map">Map:</string>
-    <string name="custom_maps">Custom maps</string>
-    <string name="custom_maps_url">Custom maps url</string>
-    <string name="see_forum">For details see JunkCode forum</string>
+    <string name="map">Mapa:</string>
+    <string name="custom_maps">Mapas customizados</string>
+    <string name="custom_maps_url">url dos mapas customizados</string>
+    <string name="see_forum">Para detalhes veja o fórum JunkCode</string>
     
-    <string name="tankicons">Tank icons</string>
-    <string name="groundicons">Ground icons</string>
+    <string name="tankicons">Ícones de tanque</string>
+    <string name="groundicons">Ícones de unidades em terra</string>
     
-    <string name="share_position">Share position</string>
-    <string name="death_markers">Leave skulls on death</string>
+    <string name="share_position">Compartilhar posição</string>
+    <string name="death_markers">Deixar caveiras quando morto</string>
 
-    <string name="size">Size</string>
-    <string name="style">Style</string>
+    <string name="size">Tamanho</string>
+    <string name="style">Estilo</string>
     
     <string-array name="style_types">
-        <item >Old</item>
-        <item >New</item>
+        <item >Velho</item>
+        <item >Novo</item>
     </string-array>
     
     <string-array name="color_schemes">
-        <item>Default</item>
-        <item>Green/Orange</item>
-        <item>Green/Red</item>
+        <item>Padrão</item>
+        <item>Verde/Laranja</item>
+        <item>Verde/Vermelho</item>
     </string-array>
-    <string name="colors">Colors</string>
+    <string name="colors">Cores</string>
     
-    <string name="pref_header_map_view">Map setup</string>
-    <string name="pref_header_GUI">GUI</string>
+    <string name="pref_header_map_view">Configuração do mapa</string>
+    <string name="pref_header_GUI">Interface gráfica</string>
     
-    <string name="help_title">Help &amp; FAQ</string>
+    <string name="help_title">Ajuda &amp; Perguntas e Respostas</string>
     
-    <string name="blink">Allow flashing</string>
-    <string name="offline_mode">Offline mode</string>
-    <string name="talk_back">Talk back</string>
+    <string name="blink">Permitir pisca</string>
+    <string name="offline_mode">Modo offline</string>
+    <string name="talk_back">Falar devolta</string>
     <string name="kills">Kills</string>
-    <string name="trigger_words_kill">Kill trigger words</string>
+    <string name="trigger_words_kill">Palavras gatilho de Kills</string>
     <string name="trigger_words_kill_default">destroyed,shot down,уничтожен</string>
-    <string name="trigger_words_kill_summary">Default value: \"destroyed,shot down,уничтожен\"</string>
-    <string name="burns">Burns</string>
-    <string name="trigger_words_burn">Burn trigger words</string>
+    <string name="trigger_words_kill_summary">Valor padrão: \"destroyed,shot down,уничтожен\"</string>
+    <string name="burns">Fogos</string>
+    <string name="trigger_words_burn">Palavras gatilho de fogo</string>
     <string name="trigger_words_burn_default">set afire,подожжён</string>
-    <string name="trigger_words_burn_summary">Default value: \"set afire,подожжён\"</string>
-    <string name="player_name">Ingame name</string>
-    <string name="ext_unlocked">Extras unlocked</string>
-    <string name="please_restart">Please, restart the app for new settings to take effect.</string>
-    <string name="planes_in_tank">Detect airplanes while in tank</string>
-    <string name="bomber_path">Bomber paths</string>
-    <string name="air_raid_siren">Air raid siren</string>
-    <string name="pointicons">Point icons</string>
-    <string name="base_approx_time_remaining">Show approximate time to base capture</string>
-    <string name="base_progress_beeping">Beep on near base capturing</string>
+    <string name="trigger_words_burn_summary">Valor padrão: \"set afire,подожжён\"</string>
+    <string name="player_name">Nome dentro do jogo</string>
+    <string name="ext_unlocked">Extras desbloqueados</string>
+    <string name="please_restart">Por favor, reinicie o app para que novos ajustes tomem efeito.</string>
+    <string name="planes_in_tank">Detectar aviões quando dentro do tanque</string>
+    <string name="bomber_path">Caminhos de bombardeiros</string>
+    <string name="air_raid_siren">Sirene de bombardeio</string>
+    <string name="pointicons">Ícones de ponto</string>
+    <string name="base_approx_time_remaining">Mostrar tempo aproximado para captura da base</string>
+    <string name="base_progress_beeping">Beepar quando perto da captura da base</string>
 
 </resources>
