--- a/translations/values-new_lng/help.xml
+++ b/translations/values-new_lng/help.xml
@@ -1,56 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     
-    <string name="help_map_ctrl">Map control</string>
+    <string name="help_map_ctrl">Controle do Mapa</string>
     <string name="text_help_map_ctrl">
-        <b>1</b> Free mode\n
-        <b>2</b> Follow plane\n
-        <b>3</b> Rotation lock\n
-        <b>4</b> Click to reset\n
+        <b>1</b> Modo Livre\n
+        <b>2</b> Seguir o avião\n
+        <b>3</b> Travar rotação\n
+        <b>4</b> Clique para resetar\n
     </string>
     
-    <string name="help_prediction">Prediction</string>
+    <string name="help_prediction">Predição</string>
     <string name="text_help_prediction">
-        Prediction of plane position (based on current speed and direction) in 10,30 and 90 seconds
+        Predição da posição do avião (baseado na velocidade e direção atual) em 10, 30 e 90 segundos
     </string>
     
-    <string name="faq">FAQ (Frequently asked questions)</string>
+    <string name="faq"> Perguntas e Respostas</string>
     
-    <string name="faq_connection">Connection</string>
+    <string name="faq_connection">Conexão</string>
     <string name="text_faq_con">
-        <b>How do I connect?</b>\n
-         \u00A0\u00A0 The app needs an IP address of your computer running War Thunder, how to get your IP see http://ip.junkcode.net \n\n
+        <b>Como eu conecto?</b>\n
+         \u00A0\u00A0 O app precisa de um endereço IP do seu computador rodando War Thunder, veja como obter seu endereço IP aqui: http://ip.junkcode.net \n\n
          
-        <b>I did enter IP and it still says \"No connection\"</b>\n
-         \u00A0\u00A0 There might be problem with your local network routing see http://ip.junkcode.net/help \n\n
+        <b>Eu coloquei meu endereço IP e o app ainda diz \"Sem conexão\"</b>\n
+         \u00A0\u00A0 Pode haver um problema com o roteamento da sua rede local, veja: http://ip.junkcode.net/help \n\n
          
-        <b>It still doesn\'t connect!</b>\n
-         \u00A0\u00A0 You didn\'t read http://ip.junkcode.net/help, did you?
+        <b>Ainda não conecta!</b>\n
+         \u00A0\u00A0 Você não leu http://ip.junkcode.net/help, não é?
          \n
     </string>
     
     <string name="faq_extras">Extras</string>
     <string name="text_faq_extra">   
-        <b>I donated, where is my code?</b>\n
-         \u00A0\u00A0 You should receive code to your email within few minutes after donation, if not contact support@junkcode.net \n\n
+        <b>Eu doei, onde está meu código?</b>\n
+         \u00A0\u00A0 Você deve receber seu código por email em alguns minutos após a doação, se você não recebeu seu código, contate support@junkcode.net \n\n
          
-        <b>I entered code but nothing is unlocked</b>\n
-         \u00A0\u00A0 Try restarting the app \n\n
+        <b>Eu coloquei meu código mas nada foi desbloqueado</b>\n
+         \u00A0\u00A0 Tente reiniciar o app \n\n
         
     </string>
-    <string name="faq_improvement">App improvement</string>
+    <string name="faq_improvement">Melhoramento do app</string>
     <string name="text_faq_improve">"  
-        <b>I don\'t like something</b>\n
-         \u00A0\u00A0 Let us know what - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+        <b>Eu não gosto de algo</b>\n
+         \u00A0\u00A0 Deixe-nos saber o que - http://junkcode.net/forum/viewforum.php?f=14 \n\n
          
-        <b>I found a bug</b>\n
-         \u00A0\u00A0 Post it here http://github.com/JunkCode/wtTactMap/issues?state=open \n\n
+        <b>Eu encontrei um bug</b>\n
+         \u00A0\u00A0 Poste ele aqui http://github.com/JunkCode/wtTactMap/issues?state=open \n\n
          
-        <b>I have idea for new feature</b>\n
-         \u00A0\u00A0 Let us know what - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+        <b>Eu tenho uma ideia para uma nova função</b>\n
+         \u00A0\u00A0 Deixe-nos saber o que - http://junkcode.net/forum/viewforum.php?f=14 \n\n
          
-        <b>I want to help with translation/icons/...</b>\n
-         \u00A0\u00A0 Some of the resources are already here http://github.com/JunkCode/wtTactMap You can propose modification or add new things. If you have any question or other ideas let us know - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+        <b>Eu quero ajudar com a traducão/ícones/...</b>\n
+         \u00A0\u00A0 Alguns recursos já estão aqui http://github.com/JunkCode/wtTactMap Você pode propor modificações ou adicionar novas coisas. Se você tem alguma pergunta ou outras ideais deixe-nos saber - http://junkcode.net/forum/viewforum.php?f=14 \n\n
           
     </string>
     
