--- a/translations/values-de/strings.xml
+++ b/translations/values-de/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">WarThunder tactical map</string>
+    <string name="app_name">WarThunder taktische Karte</string>
 
     <string name="settings">Einstellungen</string>
     <string name="hide">Ausblenden</string>
@@ -23,7 +23,7 @@
     <string name="ip">IP des Computers mit War Thunder (ohne Port):</string>
 
 
-    <string name="zoom_btns">Zoom-Buttons</string>
+    <string name="zoom_btns">Vergrößerungs-Knöpfe</string>
     <string name="donate">Spenden</string>
     <string name="enemy_vehicles">Gegnerische Fahrzeuge</string>
     <string name="friendly_vehicles">Verbündete Fahrzeuge</string>
@@ -87,7 +87,7 @@
     <string name="lines_squad">Squad</string>
     <string name="lines_target">Ziel</string>
 
-    <string name="hide_gp_login">G+ Login-Button ausblenden</string>
+    <string name="hide_gp_login">G+ Login-Knopf ausblenden</string>
 
     <string name="fullscreen">Vollbild</string>
     <string name="connect">Mit Freunden verbinden</string>
@@ -139,30 +139,30 @@
     </string-array>
     <string name="colors">Farbe</string>
 
-    <string name="pref_header_map_view">Map-Einstellungen</string>
+    <string name="pref_header_map_view">Karten-Einstellungen</string>
     <string name="pref_header_GUI">Oberfläche</string>
     
     <string name="help_title">Hilfe &amp; FAQ</string>
     
     <string name="blink">Blinkendes Icon</string>
-    <string name="offline_mode">Offline mode</string>
-    <string name="talk_back">Talk back</string>
-    <string name="kills">Kills</string>
-    <string name="trigger_words_kill">Kill trigger words</string>
+    <string name="offline_mode">Offline Modus</string>
+    <string name="talk_back">Rückmeldungs</string>
+    <string name="kills">Abschüsse</string>
+    <string name="trigger_words_kill">Abschussbestätigunswörter</string>
     <string name="trigger_words_kill_default">destroyed,shot down,wurde zerstört,wurde abgeschossen</string>
-    <string name="trigger_words_kill_summary">Default value: \"destroyed,shot down,wurde zerstört,wurde abgeschossen\"</string>
-    <string name="burns">Burns</string>
-    <string name="trigger_words_burn">Burn trigger words</string>
+    <string name="trigger_words_kill_summary">Standard: \"destroyed,shot down,wurde zerstört,wurde abgeschossen\"</string>
+    <string name="burns">Brände</string>
+    <string name="trigger_words_burn">Brandbestätigungswörter</string>
     <string name="trigger_words_burn_default">set afire,подожжён</string>
     <string name="trigger_words_burn_summary">Default value: \"set afire,wurde in Brand gesetzt\"</string>
-    <string name="player_name">Ingame name</string>
-    <string name="ext_unlocked">Extras unlocked</string>
-    <string name="please_restart">Please, restart the app for new settings to take effect.</string>
-    <string name="planes_in_tank">Detect airplanes while in tank</string>
-    <string name="bomber_path">Bomber paths</string>
-    <string name="air_raid_siren">Air raid siren</string>
-    <string name="pointicons">Point icons</string>
-    <string name="base_approx_time_remaining">Show approximate time to base capture</string>
-    <string name="base_progress_beeping">Beep on near base capturing</string>
+    <string name="player_name">Name im Spiel</string>
+    <string name="ext_unlocked">Extras freigeschaltet</string>
+    <string name="please_restart">Bitte starte die App erneut, damit die Änderungen zutreffen.</string>
+    <string name="planes_in_tank">Flugzeuge erkennen wenn im Panzer</string>
+    <string name="bomber_path">Bomber Pfade</string>
+    <string name="air_raid_siren">Luftangriff-Sirene</string>
+    <string name="pointicons">Punkt-Icons</string>
+    <string name="base_approx_time_remaining">Zeige vorraussichtliche Zeit bis Basiseroberung</string>
+    <string name="base_progress_beeping">Piep bei naher Basiseroberung</string>
 
 </resources>
