--- a/translations/values-de/strings.xml
+++ b/translations/values-de/strings.xml
@@ -149,12 +149,12 @@
     <string name="talk_back">Rückmeldungs</string>
     <string name="kills">Abschüsse</string>
     <string name="trigger_words_kill">Abschussbestätigunswörter</string>
-    <string name="trigger_words_kill_default">destroyed,shot down,wurde zerstört,wurde abgeschossen</string>
-    <string name="trigger_words_kill_summary">Standard: \"destroyed,shot down,wurde zerstört,wurde abgeschossen\"</string>
+    <string name="trigger_words_kill_default">destroyed,shot down,zerstörte,schoss ab</string>
+    <string name="trigger_words_kill_summary">Standard: \"destroyed,shot down,zerstörte,schoss ab\"</string>
     <string name="burns">Brände</string>
     <string name="trigger_words_burn">Brandbestätigungswörter</string>
-    <string name="trigger_words_burn_default">set afire,подожжён</string>
-    <string name="trigger_words_burn_summary">Default value: \"set afire,wurde in Brand gesetzt\"</string>
+    <string name="trigger_words_burn_default">set afire,setzte in Brand</string>
+    <string name="trigger_words_burn_summary">Default value: \"set afire,setzte in Brand\"</string>
     <string name="player_name">Name im Spiel</string>
     <string name="ext_unlocked">Extras freigeschaltet</string>
     <string name="please_restart">Bitte starte die App erneut, damit die Änderungen zutreffen.</string>
@@ -162,7 +162,32 @@
     <string name="bomber_path">Bomber Pfade</string>
     <string name="air_raid_siren">Luftangriff-Sirene</string>
     <string name="pointicons">Punkt-Icons</string>
-    <string name="base_approx_time_remaining">Zeige vorraussichtliche Zeit bis Basiseroberung</string>
+    <string name="base_approx_time_remaining">Zeige voraussichtliche Zeit bis Basiseroberung</string>
     <string name="base_progress_beeping">Piep bei naher Basiseroberung</string>
+    <string name="mapscale">Map scale</string>
+    <string name="breadcrumbs">Breadcrumbs</string>
+    <string name="support_development">Support the development</string>
+    <string name="airplane_range">Airplane detection range</string>
+    <string name="ground_range">Ground detection range</string>
+    <string name="connected">Connected</string>
+    <string name="supporter">Supporter</string>
+    <string name="contributor">Contributor</string>
+    <string name="contribute_resources">Help out with app resources</string>
+    <string name="waiting_for_battle">Waiting for battle</string>
+    <string name="subscription">(Subscription)</string>
+    <string name="exit_title">Exit the app?</string>
+    <string name="exit_question">Do you want to disconnect and close the app?</string>
+    <string name="hide_add_requirement">Become Supporter or Contributor to turn the ads off.</string>
+    <string name="coop_start">Start new co-op</string>
+    <string name="coop_join">Join co-op</string>
+    <string name="coop_title">Co-op session</string>
+    <string name="close_enemy_detection">Close enemy detection</string>
+    <string name="far_enemy_detection">Far enemy detection</string>
+    <string name="coop_connecting_to_id">Connecting to co-op ID:</string>
+    <string name="coop_session_started">Co-op session started.</string>
+    <string name="id">ID:</string>
+    <string name="coop_chat_instruction_prefix">Type</string>
+    <string name="coop_chat_instruction_postfix">to game team chat.</string>
+    <string name="show_ads_while_not_playing">Show ads while not playing</string>
 
 </resources>
