--- a/translations/values-pl/strings.xml
+++ b/translations/values-pl/strings.xml
@@ -144,50 +144,50 @@
     
     <string name="help_title">Pomoc &amp; FAQ</string>
     
-    <string name="blink">Allow flashing</string>
-    <string name="offline_mode">Offline mode</string>
-    <string name="talk_back">Talk back</string>
-    <string name="kills">Kills</string>
-    <string name="trigger_words_kill">Kill trigger words</string>
-    <string name="trigger_words_kill_default">destroyed,shot down,уничтожен</string>
-    <string name="trigger_words_kill_summary">Default value: \"destroyed,shot down,уничтожен\"</string>
-    <string name="burns">Burns</string>
-    <string name="trigger_words_burn">Burn trigger words</string>
-    <string name="trigger_words_burn_default">set afire,подожжён</string>
-    <string name="trigger_words_burn_summary">Default value: \"set afire,подожжён\"</string>
-    <string name="player_name">Ingame name</string>
-    <string name="ext_unlocked">Extras unlocked</string>
-    <string name="please_restart">Please, restart the app for new settings to take effect.</string>
-    <string name="planes_in_tank">Detect airplanes while in tank</string>
-    <string name="bomber_path">Bomber paths</string>
-    <string name="air_raid_siren">Air raid siren</string>
-    <string name="pointicons">Point icons</string>
-    <string name="base_approx_time_remaining">Show approximate time to base capture</string>
-    <string name="base_progress_beeping">Beep on near base capturing</string>
-    <string name="mapscale">Map scale</string>
-    <string name="breadcrumbs">Breadcrumbs</string>
-	<string name="support_development">Support the development</string>
-	<string name="airplane_range">Airplane detection range</string>
-	<string name="ground_range">Ground detection range</string>
-	<string name="connected">Connected</string>
-	<string name="supporter">Supporter</string>
-	<string name="contributor">Contributor</string>
-	<string name="contribute_resources">Help out with app resources</string>
-	<string name="waiting_for_battle">Waiting for battle</string>
-	<string name="subscription">(Subscription)</string>
-	<string name="exit_title">Exit the app?</string>
-	<string name="exit_question">Do you want to disconnect and close the app?</string>
-	<string name="hide_add_requirement">Become Supporter or Contributor to turn the ads off.</string>
-	<string name="coop_start">Start new co-op</string>
-	<string name="coop_join">Join co-op</string>
-	<string name="coop_title">Co-op session</string>
-	<string name="close_enemy_detection">Close enemy detection</string>
-	<string name="far_enemy_detection">Far enemy detection</string>
-	<string name="coop_connecting_to_id">Connecting to co-op ID:</string>
-	<string name="coop_session_started">Co-op session started.</string>
-	<string name="id">ID:</string>
-	<string name="coop_chat_instruction_prefix">Type</string>
-	<string name="coop_chat_instruction_postfix">to game team chat.</string>
-	<string name="show_ads_while_not_playing">Show ads while not playing</string>
+ <string name="blink">Allow flashing</string>
+ <string name="offline_mode">Tryb Offline</string>
+ <string name="talk_back">Talk back</string>
+ <string name="kills">Zestrzelenia i zniszczenia</string>
+ <string name="trigger_words_kill">Kill trigger words</string>
+ <string name="trigger_words_kill_default">destroyed,shot down,уничтожен</string>
+ <string name="trigger_words_kill_summary">Default value: \"destroyed,shot down,уничтожен\"</string>
+ <string name="burns">Burns</string>
+ <string name="trigger_words_burn">Burn trigger words</string>
+ <string name="trigger_words_burn_default">set afire,подожжён</string>
+ <string name="trigger_words_burn_summary">Default value: \"set afire,подожжён\"</string>
+ <string name="player_name">Nazwa w grze</string>
+ <string name="ext_unlocked">Odblokuj dodatki</string>
+ <string name="please_restart">Zrestartuj aplikacje, aby nowe ustawienia zaczeły działać</string>
+ <string name="planes_in_tank">Wykrywaj samoloty kiedy grasz czołgiem</string>
+ <string name="bomber_path">Ścieżki bombowców</string>
+ <string name="air_raid_siren">Dźwięk syren podczas nalotu</string>
+ <string name="pointicons">Ikony punktów</string>
+ <string name="base_approx_time_remaining">Pokaż przybliżony czas do przejęcia bazy</string>
+ <string name="base_progress_beeping">Powiadom kiedy baza w pobliżu będzie przejmowana</string>
+ <string name="mapscale">Skala mapy</string>
+ <string name="breadcrumbs">Breadcrumbs</string>
+ <string name="support_development">Wspomóż dewelopera</string>
+ <string name="airplane_range">Zasięg obszaru wykrywania samolotów</string>
+ <string name="ground_range">Zasięg obszaru wykrywania pojazdów naziemnych</string>
+ <string name="connected">Connected</string>
+ <string name="supporter">Supporter</string>
+ <string name="contributor">Contributor</string>
+ <string name="contribute_resources">Help out with app resources</string>
+ <string name="waiting_for_battle">Oczekwianie na bitwę</string>
+ <string name="subscription">(Subscription)</string>
+ <string name="exit_title">Wyjść z aplikacji?</string>
+ <string name="exit_question">Czy chcesz rozłączyć się z komputerem, a następnie opuścić aplikacje?</string>
+ <string name="hide_add_requirement">Wspomóż autora lub pomóż w tworzeniu aplikacji aby móc wyłączyć reklamy.</string>
+ <string name="coop_start">Rozpocznij nową kooperację</string>
+ <string name="coop_join">Dołącz do kooperacji</string>
+ <string name="coop_title">Sesja Kooperacji</string>
+ <string name="close_enemy_detection">Bliższe wykrywanie wroga</string>
+ <string name="far_enemy_detection">Dalsze wykrywanie wroga</string>
+ <string name="coop_connecting_to_id">Dołączanie do co-op ID:</string>
+ <string name="coop_session_started">Sesja kooperacji rozpoczęta.</string>
+ <string name="id">ID:</string>
+ <string name="coop_chat_instruction_prefix">Typ</string>
+ <string name="coop_chat_instruction_postfix">to game team chat.</string>
+ <string name="show_ads_while_not_playing">Wyświetlaj reklamy kiedy nie grasz</string>
 
 </resources>
