Translation Eng - ITA
Complete translation of FAQ page

--- a/translations/values-it/help.xml
+++ b/translations/values-it/help.xml
@@ -3,54 +3,54 @@
     
     <string name="help_map_ctrl">Map control</string>
     <string name="text_help_map_ctrl">
-        <b>1</b> Free mode\n
-        <b>2</b> Follow plane\n
-        <b>3</b> Rotation lock\n
-        <b>4</b> Click to reset\n
+        <b>1</b> Modalità libera\n
+        <b>2</b> Segui il velivolo\n
+        <b>3</b> Blocco rotazione\n
+        <b>4</b> Click per resettare\n
     </string>
     
-    <string name="help_prediction">Prediction</string>
+    <string name="help_prediction">Predizione</string>
     <string name="text_help_prediction">
-        Prediction of plane position (based on current speed and direction) in 10,30 and 90 seconds
+        Stima posizione del velivolo (basata su velocità e posizione corrente) in 10,30 and 90 secondi
     </string>
     
     <string name="faq">FAQ (Frequently asked questions)</string>
     
     <string name="faq_connection">Connection</string>
     <string name="text_faq_con">
-        <b>How do I connect?</b>\n
-         \u00A0\u00A0 The app needs an IP address of your computer running War Thunder, how to get your IP see http://ip.junkcode.net \n\n
+        <b>Come mi connetto?</b>\n
+         \u00A0\u00A0 L\'applicazione richiede l\'IP del computer che sta eseguendo War Thunder, per ulteriori istruzioni su come ottenere il proprio IP consultare http://ip.junkcode.net \n\n
          
-        <b>I did enter IP and it still says \"No connection\"</b>\n
-         \u00A0\u00A0 There might be problem with your local network routing see http://ip.junkcode.net/help \n\n
+        <b>Ho inserito l\'IP ma continuo a ricevere \"Nessuna Connessione\"</b>\n
+         \u00A0\u00A0 Ci potrebbero essere ulteriori problemi con la tua rete locale, per ulteriori dettagli http://ip.junkcode.net/help \n\n
          
-        <b>It still doesn\'t connect!</b>\n
-         \u00A0\u00A0 You didn\'t read http://ip.junkcode.net/help, did you?
+        <b>Ancora non si connette!</b>\n
+         \u00A0\u00A0 Allora sei di coccio? Non hai ancora letto  http://ip.junkcode.net/help, dai ammettilo ;p
          \n
     </string>
     
     <string name="faq_extras">Extras</string>
     <string name="text_faq_extra">   
-        <b>I donated, where is my code?</b>\n
-         \u00A0\u00A0 You should receive code to your email within few minutes after donation, if not contact support@junkcode.net \n\n
+        <b>Ho fatto la donazione, dov\'è il mio codice?</b>\n
+         \u00A0\u00A0 Dovresti ricevere il tuo codice alcuni minuti dopo la donazione, per ogni altra evenienza contatta support@junkcode.net \n\n
          
-        <b>I entered code but nothing is unlocked</b>\n
-         \u00A0\u00A0 Try restarting the app \n\n
+        <b>Ho inserito il codice ma niente è cambiato</b>\n
+         \u00A0\u00A0 Prova a riavviare l\'app \n\n
         
     </string>
     <string name="faq_improvement">App improvement</string>
     <string name="text_faq_improve">"  
-        <b>I don\'t like something</b>\n
-         \u00A0\u00A0 Let us know what - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+        <b>Non mi piace qualche cosa</b>\n
+         \u00A0\u00A0 Facci sapere cosa in dettaglio - http://junkcode.net/forum/viewforum.php?f=14 \n\n
          
-        <b>I found a bug</b>\n
-         \u00A0\u00A0 Post it here http://github.com/JunkCode/wtTactMap/issues?state=open \n\n
+        <b>Ho trovato un bug</b>\n
+         \u00A0\u00A0 Pubblicalo su questa pagina http://github.com/JunkCode/wtTactMap/issues?state=open \n\n
          
-        <b>I have idea for new feature</b>\n
-         \u00A0\u00A0 Let us know what - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+        <b>Ho un'idea per una nuova funzione</b>\n
+         \u00A0\u00A0 Faccelo sapere (preferibilmente in inglese) - http://junkcode.net/forum/viewforum.php?f=14 \n\n
          
-        <b>I want to help with translation/icons/...</b>\n
-         \u00A0\u00A0 Some of the resources are already here http://github.com/JunkCode/wtTactMap You can propose modification or add new things. If you have any question or other ideas let us know - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+        <b>Voglio aiustare con la traduzione/icons/...</b>\n
+         \u00A0\u00A0 Parte delle risorse le puoi trovare su http://github.com/JunkCode/wtTactMap Puoi proporre modifiche ed aggiunte. Se hai domande o suggerimenti  - http://junkcode.net/forum/viewforum.php?f=14 \n\n
          
     </string>
     
