Update for the pt-BR translation

--- a/translations/values-pt-rBR/strings.xml
+++ b/translations/values-pt-rBR/strings.xml
@@ -30,8 +30,8 @@
     <string name="friendly_structures">Estruturas Aliadas</string>
     <string name="enemy_structures">Estruturas Inimigas</string>
     
-    <string name="updates_speed">Frequencia de atualização</string>
-    <string name="how_ip">"Como obter o endereço IP, veja: http://ip.junkcode.net/help"</string>
+    <string name="updates_speed">Frequência de atualização</string>
+    <string name="how_ip">"Sobre como obter o endereço IP, veja: http://ip.junkcode.net/help"</string>
     <string name="how_ip_der">"Se você não sabe como obter o endereço IP, clique aqui:"</string>
     <string name="ip_err">Endereço IP inválido</string>
     <string name="ip_err_wrong">"Escreva o endereço IP na forma: \r\nXXX.XXX.XXX.XXX \r\n Clique em Ajuda para um guia de como obter um."</string>
@@ -164,33 +164,33 @@
     <string name="pointicons">Ícones de ponto</string>
     <string name="base_approx_time_remaining">Mostrar tempo aproximado para captura da base</string>
     <string name="base_progress_beeping">Beepar quando perto da captura da base</string>
-    <string name="mapscale">Map scale</string>
+    <string name="mapscale">Escala do mapa</string>
     <string name="breadcrumbs">Breadcrumbs</string>
-    <string name="support_development">Support the development</string>
+    <string name="support_development">Apoie o desenvolvimento</string>
 
-    <string name="airplane_range">Airplane detection range</string>
-    <string name="ground_range">Ground detection range</string>
-    <string name="connected">Connected</string>
-    <string name="supporter">Supporter</string>
-    <string name="contributor">Contributor</string>
-    <string name="contribute_resources">Help out with app resources</string>
-    <string name="waiting_for_battle">Waiting for battle</string>
-    <string name="subscription">(Subscription)</string>
-    <string name="exit_title">Exit the app?</string>
-    <string name="exit_question">Do you want to disconnect and close the app?</string>
-    <string name="hide_add_requirement">Become Supporter or Contributor to turn the ads off.</string>
-    <string name="coop_start">Start new co-op</string>
-    <string name="coop_join">Join co-op</string>
-    <string name="coop_title">Co-op session</string>
-    <string name="close_enemy_detection">Close enemy detection</string>
-    <string name="far_enemy_detection">Far enemy detection</string>
-    <string name="coop_connecting_to_id">Connecting to co-op ID:</string>
-    <string name="coop_session_started">Co-op session started.</string>
+    <string name="airplane_range">Raio de detecção de aviões</string>
+    <string name="ground_range">Raio de detecção terrestre</string>
+    <string name="connected">Conectado</string>
+    <string name="supporter">Apoiador</string>
+    <string name="contributor">Contribuidorr</string>
+    <string name="contribute_resources">Ajude com recursos para o aplicativo</string>
+    <string name="waiting_for_battle">Aguardando pela batalha</string>
+    <string name="subscription">(Inscrição)</string>
+    <string name="exit_title">Sair do aplicativo?</string>
+    <string name="exit_question">Desconectar e sair do aplicativo?</string>
+    <string name="hide_add_requirement">Torne-se um Apoiador ou Contribuidor para desativar os anúncios.</string>
+    <string name="coop_start">Começar novo co-op</string>
+    <string name="coop_join">Entrar em co-op</string>
+    <string name="coop_title">Sessão co-op </string>
+    <string name="close_enemy_detection">Fechar detecção de inimigos</string>
+    <string name="far_enemy_detection">Detecção de inimigos distantes</string>
+    <string name="coop_connecting_to_id">Conectando à ID co-op:</string>
+    <string name="coop_session_started">Sessão co-op iniciada.</string>
     <string name="id">ID:</string>
-    <string name="coop_chat_instruction_prefix">Type</string>
-    <string name="coop_chat_instruction_postfix">to game team chat.</string>
-    <string name="show_ads_while_not_playing">Show ads while not playing</string>
-    <string name="allow_data_collection">Allow anonymous data collection</string>
-    <string name="data_collection_explained">With compliance by Google Analytics rules, helping to make the app better for You.</string>
+    <string name="coop_chat_instruction_prefix">Tipo</string>
+    <string name="coop_chat_instruction_postfix">para o chat em jogo do time.</string>
+    <string name="show_ads_while_not_playing">Mostar anúncios quando não estiver tocando</string>
+    <string name="allow_data_collection">Permir coleta anônima de dados</string>
+    <string name="data_collection_explained">De acordo com as regras do Google Analytics, ajudando a fazer o app melhor para você.</string>
 
 </resources>
